# ISEK_KOL_WEB_APP

./: .gitignore  README.md  index.html
server/: agent_test.py  main.py  peers.json  peers.py  requirements.txt
server/isek/: README.md  bootstrap.py  default_config.yaml  isek_center.py  isek_config.py  pyproject.toml
server/isek/agent/: abstract_agent.py  distributed_agent.py  memory.py  persona.py  single_agent.py  toolbox.py
server/isek/embedding/: openai_embedding.py
server/isek/llm/: openai_model.py
server/isek/node/: etcd_registry.py  isek_center_registry.py  node.py  node_index.py  p2p_node.py  registry.py
server/isek/node/noderpc/: isek_node_rpc.py  node.proto  node_pb2.py  node_pb2_grpc.py
server/p2p-server/: p2p_server.js  package-lock.json  package.json
src/: App.tsx  index.css
src/api/: index.ts
src/components/: AgentAvatar.tsx  AgentBadge.tsx  AgentMessage.tsx  CampaignMetrics.tsx  ChatWindow.tsx  TaskList.tsx  TwitterSequence.tsx  TypingIndicator.tsx  UserInput.tsx
src/data/: agents.ts
src/hooks/: useChatSimulation.ts
src/types/: index.ts
